fix(replayTest): split ranges into independent paramatrised tests